# crypto-market-loader

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  REPORT.md  pyproject.toml  sample_config.yaml
api/: cli.py
application/: dto.py  schema.py
ingestion/: funding.py  http_client.py  lake.py  open_interest.py  option_instruments.py  plotting.py  spot.py  timescaledb_loader.py  trades.py
samples/: bronze_funding_perp_deribit_BTC_8h_sample_10_rows.csv  bronze_funding_perp_deribit_ETH_8h_sample_10_rows.csv  bronze_funding_perp_deribit_SOL_8h_sample_10_rows.csv  bronze_oi_perp_deribit_BTC_1m_sample_10_rows.csv  bronze_oi_perp_deribit_ETH_1m_sample_10_rows.csv  bronze_oi_perp_deribit_SOL_1m_sample_10_rows.csv  bronze_perp_deribit_BTC_1m_sample_10_rows.csv  bronze_perp_deribit_ETH_1m_sample_10_rows.csv  bronze_perp_deribit_SOL_1m_sample_10_rows.csv  bronze_spot_deribit_BTCUSDT_1m_sample_10_rows.csv  bronze_spot_deribit_BTC_1m_sample_10_rows.csv  bronze_spot_deribit_ETH_1m_sample_10_rows.csv  bronze_spot_deribit_SOL_1m_sample_10_rows.csv  funding_perp_deribit_BTC_8h_sample_10_rows.csv  funding_perp_deribit_ETH_8h_sample_10_rows.csv  funding_perp_deribit_SOL_8h_sample_10_rows.csv  oi_perp_deribit_BTCUSDT_1m_sample_10_rows.csv  oi_perp_deribit_BTCUSDT_5m_sample_10_rows.csv  oi_perp_deribit_BTC_1m_sample_10_rows.csv  oi_perp_deribit_ETH_1m_sample_10_rows.csv  oi_perp_deribit_SOL_1m_sample_10_rows.csv  perp_deribit_BTC_1m_sample_10_rows.csv  perp_deribit_ETH_1m_sample_10_rows.csv  perp_deribit_SOL_1m_sample_10_rows.csv  perp_deribit_perp_BTC_1m_sample_10_rows.csv  perp_deribit_perp_ETH_1m_sample_10_rows.csv  perp_deribit_perp_SOL_1m_sample_10_rows.csv  spot_deribit_BTCUSDT_1m_sample_10_rows.csv  spot_deribit_BTC_1m_sample_10_rows.csv  spot_deribit_ETHUSDT_1m_sample_10_rows.csv  spot_deribit_ETH_1m_sample_10_rows.csv  spot_deribit_SOLUSDT_1m_sample_10_rows.csv  spot_deribit_SOL_1m_sample_10_rows.csv  spot_deribit_spot_BTCUSDT_1m_sample_10_rows.csv  spot_deribit_spot_BTCUSDT_5m_sample_10_rows.csv  spot_deribit_spot_BTC_1m_sample_10_rows.csv  spot_deribit_spot_ETH_1m_sample_10_rows.csv  spot_deribit_spot_SOL_1m_sample_10_rows.csv
tests/: test_artifact_service.py  test_bronze_report_service.py  test_bronze_reporting_service.py  test_bronze_runtime_service.py  test_check_legacy_trades_dataset_script.py  test_cli_lock.py  test_cli_parser_args.py  test_config_validation.py  test_data_quality_thresholds.py  test_deribit_funding.py  test_deribit_option_trades.py  test_deribit_trades.py  test_fetch_bootstrap.py  test_fetch_runtime_policy.py  test_fetch_service.py  test_funding.py  test_gold_command.py  test_gold_service.py  test_http_client.py  test_import_linter.py  test_lake.py  test_loader_bounds.py  test_loader_checkpoint.py  test_loader_command.py  test_loader_dataset_handlers.py  test_medallion_pipeline_script.py  test_open_interest.py  test_option_instruments.py  test_parquet_schema_contracts.py  test_plotting.py  test_runtime_service.py  test_schema_contract.py  test_silver_command.py  test_silver_service.py  test_spot.py  test_stats_command.py  test_storage_service.py  test_timeframes_command.py  test_timescaledb_loader.py  (+2 more)
(+33 files in other folders)
