[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-l2-fetcher"
version = "0.1.0"
description = "Framework for crypto L2 and market data ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
  "pyarrow>=16.0.0",
  "psycopg[binary]>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "ingestion*",
  "api*",
  "infra*",
  "preprocessing*",
  "modeling*",
  "evaluation*",
]
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "."
exclude = ["notebooks/"]
