[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-market-loader"
version = "0.1.0"
description = "Framework for crypto market data ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "polars>=1.8.0",
  "duckdb>=1.0.0",
  "matplotlib>=3.8.0",
  "pyarrow>=16.0.0",
  "PyYAML>=6.0.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pandas-stubs>=2.2.0.240218",
  "pre-commit>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "application*",
  "ingestion*",
  "api*",
  "infra*",
  "preprocessing*",
  "modeling*",
  "evaluation*",
]
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "."
exclude = ["notebooks/"]
