[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-market-loader"
version = "0.1.0"
description = "Framework for crypto market data ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.4.4",
  "pandas>=3.0.2",
  "polars>=1.40.1",
  "duckdb>=1.5.2",
  "matplotlib>=3.10.9",
  "pyarrow>=24.0.0",
  "PyYAML>=6.0.3",
  "pydantic>=2.13.4",
  "psycopg[binary]>=3.3.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "application*",
  "ingestion*",
  "api*",
  "infra*",
]
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q --cov=application --cov=ingestion --cov=api --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "."
exclude = ["notebooks/", "tests/", "scripts/"]
